[gd_scene load_steps=5 format=3 uid="uid://bovl2ghalu61a"]

[ext_resource type="Script" uid="uid://cqkbpcgdkpr6e" path="res://objects/wizard_tower.gd" id="1_wizard"]
[ext_resource type="PackedScene" uid="uid://dsobhkg01lw2h" path="res://objects/basic_projectile.tscn" id="2_proj"]
[ext_resource type="PackedScene" uid="uid://c2dhwm3k0tuqi" path="res://models/wizard_tower.glb" id="3_model"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tower"]

[node name="WizardTower" type="StaticBody3D"]
collision_mask = 0
script = ExtResource("1_wizard")
attack_damage = 45.0
projectile_scene = ExtResource("2_proj")

[node name="WizardModel" type="Node3D" parent="."]

[node name="ModelInstance" parent="WizardModel" instance=ExtResource("3_model")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="ProjectileSpawn" type="Marker3D" parent="WizardModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.6, 0)

[node name="RangeArea3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tower")

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 0.8
height = 2.0
affect_navigation_mesh = true
